--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,10 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: DATABASE_URL
+        fromDatabase:
+          name: timestamp-db
+          property: connectionString
     
 databases:
   - name: timestamp-db
